--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,10 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname: jkeylu
+disqus_shortname:
+
+# DuoShuo
+duoshuo_shortname: blogjkeylu
 
 # Extensions
 plugins:
