--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "hexo",
-  "version": "0.0.1",
+  "name": "jkey-blog",
+  "version": "1.1.2",
   "private": true,
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.1.0"
   },
   "dependencies": {
-    "hexo-generator-feed": "0.0.8",
+    "hexo-generator-feed": "0.0.10",
     "hexo-generator-sitemap": "0.0.6"
   }
 }
